welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:9: error: ';' expected but integer literal found.
		ruturn 000000000000
                       ^