welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	
	if (nums.length == 0){
		return -1
	}
	if(nums.length == 10){
		return 999
	}else{
		ruturn 000000000000
	}
	
}
